kubernetes/cluster/extras/pairdrop/pairdrop.yaml
# Service: PairDrop
# Ingress: pd.brhd.io
# Label: app.kubernetes.io/name: pairdrop
---
apiVersion: v1
kind: Service
metadata:
  name: pairdrop
  namespace: extras
  labels:
    app.kubernetes.io/name: pairdrop
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app.kubernetes.io/name: pairdrop
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pairdrop
  namespace: extras
  labels:
    app.kubernetes.io/name: pairdrop
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pairdrop
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: extras
      labels:
        app.kubernetes.io/name: pairdrop
    spec:
      restartPolicy: Always
      containers:
        - name: pairdrop
          image: ghcr.io/schlagmichdoch/pairdrop:v1.11.2
          resources:
            requests:
              memory: 50Mi
              cpu: 50m
            limits:
              memory: 100Mi
          ports:
            - containerPort: 3000
