kubernetes/cluster/extras/pairdrop/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pairdrop
  namespace: extras
  labels:
    app.kubernetes.io/name: pairdrop
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  rules:
    - host: pd.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: pairdrop-keda-http-interceptor
                port:
                  number: 3000
